[gd_scene load_steps=10 format=3 uid="uid://buwmldaxaijao"]

[ext_resource type="Script" uid="uid://u5vesy70l345" path="res://Menu/level_up.gd" id="1_4af3g"]
[ext_resource type="Shader" uid="uid://dj5shm1fmp5yv" path="res://Menu/pause_menu.gdshader" id="2_ylrw7"]
[ext_resource type="Texture2D" uid="uid://d1efegra2d1gv" path="res://Menu/assets/dmg_level_up.png" id="3_1x6oh"]
[ext_resource type="Texture2D" uid="uid://btbam52jupy60" path="res://Menu/assets/ats_level_up.png" id="4_secp2"]
[ext_resource type="Texture2D" uid="uid://dm6lpb4tccyha" path="res://Menu/assets/hp_level_up.png" id="5_j1vvt"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qxtyl"]
shader = ExtResource("2_ylrw7")
shader_parameter/lod = 0.0

[sub_resource type="Animation" id="Animation_qxtyl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_tv8f1"]
resource_name = "blur"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.825]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qxtyl"]
_data = {
&"RESET": SubResource("Animation_qxtyl"),
&"blur": SubResource("Animation_tv8f1")
}

[node name="LevelUP" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4af3g")
metadata/_edit_horizontal_guides_ = [180.0]
metadata/_edit_vertical_guides_ = [320.0]

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_qxtyl")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -76.0
offset_right = 40.0
offset_bottom = 19.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.5, 1.5)

[node name="VBoxContainer2" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer2"]
layout_mode = 2
text = "Pick power up"
horizontal_alignment = 1

[node name="VBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 12
alignment = 1

[node name="Damage" type="Button" parent="PanelContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
icon = ExtResource("3_1x6oh")

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer2/VBoxContainer/Damage"]
layout_mode = 0
offset_top = 41.0
offset_right = 40.0
offset_bottom = 64.0
text = "DMG+"
horizontal_alignment = 1

[node name="Attack_speed" type="Button" parent="PanelContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2
icon = ExtResource("4_secp2")

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer2/VBoxContainer/Attack_speed"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -17.0
offset_top = 20.5
offset_right = 23.0
offset_bottom = 43.5
grow_horizontal = 2
grow_vertical = 2
text = "AS+"
horizontal_alignment = 1

[node name="Health" type="Button" parent="PanelContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2
icon = ExtResource("5_j1vvt")

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer2/VBoxContainer/Health"]
layout_mode = 0
offset_top = 41.0
offset_right = 40.0
offset_bottom = 64.0
text = "HP+"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_qxtyl")
}

[connection signal="button_down" from="PanelContainer/VBoxContainer2/VBoxContainer/Damage" to="." method="_on_damage_button_down"]
[connection signal="button_down" from="PanelContainer/VBoxContainer2/VBoxContainer/Attack_speed" to="." method="_on_attack_speed_button_down"]
[connection signal="button_down" from="PanelContainer/VBoxContainer2/VBoxContainer/Health" to="." method="_on_health_button_down"]
